--- a/index.html
+++ b/index.html
@@ -2,8 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ferran Torres Profile</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>Football Leagues</title>
+    <!-- Bootstrap CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-light">
+    <div class="container py-4">
+        <h1 class="mb-4 text-center">Football Leagues</h1>
+
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
+            {% for league in leagues %}
+            <div class="col">
+                <div class="card h-100 shadow-sm">
+                    <img src="{{ league.image }}/logo.png" class="card-img-top p-3" alt="{{ league.name }} logo" style="height: 100px; object-fit: contain;">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">{{ league.name }}</h5>
+                        <p class="card-text text-muted">ID: {{ league.id }}</p>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    <!-- Bootstrap JS (optional, for features like dropdowns/modals if needed) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
