--- a/index.html
+++ b/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Football Leagues</title>
-    <!-- Bootstrap CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Fruit Catalog</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="bg-light">
-    <div class="container py-4">
-        <h1 class="mb-4 text-center">Football Leagues</h1>
+<body>
+    <div class="container py-5">
+        <h1 class="text-center mb-4">Fruit Catalog</h1>
 
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
-            {% for league in leagues %}
-            <div class="col">
-                <div class="card h-100 shadow-sm">
-                    <img src="{{ league.image }}/logo.png" class="card-img-top p-3" alt="{{ league.name }} logo" style="height: 100px; object-fit: contain;">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">{{ league.name }}</h5>
-                        <p class="card-text text-muted">ID: {{ league.id }}</p>
+        <!-- Search Bar -->
+        <form class="d-flex justify-content-center mb-5" method="get" action="/">
+            <input class="form-control w-25 me-2" type="number" name="search" placeholder="Enter Fruit ID" required>
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+
+        {% if request.args.get('search') %}
+            {% set search_id = request.args.get('search') | int %}
+            {% set found = false %}
+            <div class="row justify-content-center">
+                {% for fruit in fruits %}
+                    {% if fruit.id == search_id %}
+                        {% set found = true %}
+                        <div class="col-md-6">
+                            <div class="card shadow-lg">
+                                <div class="card-body">
+                                    <h4 class="card-title">{{ fruit.name }}</h4>
+                                    <p class="card-text"><strong>ID:</strong> {{ fruit.id }}</p>
+                                    <a href="{{ url_for('fruit_detail', id=fruit.id) }}" class="btn btn-primary">View Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+                {% if not found %}
+                    <div class="alert alert-warning text-center mt-4">
+                        No fruit found with ID {{ search_id }}.
                     </div>
-                </div>
+                {% endif %}
             </div>
-            {% endfor %}
-        </div>
+        {% else %}
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                {% for fruit in fruits %}
+                    <div class="col">
+                        <div class="card h-100 shadow-sm">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ fruit.name }}</h5>
+                                <p class="card-text">ID: {{ fruit.id }}</p>
+                                <a href="{{ url_for('fruit_detail', id=fruit.id) }}" class="btn btn-primary">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
     </div>
-
-    <!-- Bootstrap JS (optional, for features like dropdowns/modals if needed) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
